# HuphyChan-dev

./: .gitignore  README.md
pygmalion_locomotion/: README.md  isaac_run.sh  pyproject.toml  run.sh
pygmalion_locomotion/assets/biped_lower_body_mjcf/: README.md  convert_urdf_to_mjcf.py  robot.urdf  robot.xml  scene.xml
pygmalion_locomotion/assets/biped_lower_body_mjcf/meshes/: L_bukji_down_1.stl  L_feet_toe_1.stl  L_hip_ry_1.stl  R_bukji_down_1.stl  R_bukji_up_1.stl  R_feet_1.stl  base_link.stl
pygmalion_locomotion/assets/biped_lower_body_mjcf/src_urdf/: USD_Conversion_TEST.gazebo  USD_Conversion_TEST.trans  USD_Conversion_TEST.xacro  (+1 more)
pygmalion_locomotion/assets/robot_specs/: robstride_biped.yaml
pygmalion_locomotion/scripts/: accumulate_train_videos.sh  analyze.py  analyze_link_loads.py  analyze_motor_speed.py  analyze_motor_timeseries.py  analyze_motor_util.py  analyze_run.sh  analyze_tensorboard.py  audit_notes.sh  block_no_video.sh  check_env.py  check_foot_z.py  check_joint_props.py  check_obs_groups.py  convert_asset.py  crop_figure.py  curriculum_train.sh  fetch_refs.py  gait_humanlikeness.py  gait_toe_timing.py  joint_telemetry.py  lint_docs.sh  make_run_report.py  measure.py  measure_and_stage4.sh  motor_util_cross.py  overnight_chain.sh  play.py  play_keyboard.py  progress_video.py  record_progress.py  render_robot.py  require_reward_research.sh  retro_reward_table.py  reward_glossary.py  rotate_robot_forward.py  run_training.sh  scatter_torque_rpm.py  spawn_check.py  train.py  (+9 more)
pygmalion_locomotion/source/pygmalion_locomotion/: __init__.py
(+274 files in other folders)
